v6.24.0/_sources/plugins/sda_host_port_onboarding_workflow_manager_module.rst.txt

.. Document meta

:orphan:

.. |antsibull-internal-nbsp| unicode:: 0xA0
    :trim:

.. role:: ansible-attribute-support-label
.. role:: ansible-attribute-support-property
.. role:: ansible-attribute-support-full
.. role:: ansible-attribute-support-partial
.. role:: ansible-attribute-support-none
.. role:: ansible-attribute-support-na
.. role:: ansible-option-type
.. role:: ansible-option-elements
.. role:: ansible-option-required
.. role:: ansible-option-versionadded
.. role:: ansible-option-aliases
.. role:: ansible-option-choices
.. role:: ansible-option-choices-default-mark
.. role:: ansible-option-default-bold
.. role:: ansible-option-configuration
.. role:: ansible-option-returned-bold
.. role:: ansible-option-sample-bold

.. Anchors

.. _ansible_collections.cisco.dnac.sda_host_port_onboarding_workflow_manager_module:

.. Anchors: short name for ansible.builtin

.. Anchors: aliases



.. Title

cisco.dnac.sda_host_port_onboarding_workflow_manager module -- Manage host port onboarding in SD-Access Fabric in Cisco Catalyst Center.
++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++

.. Collection note

.. note::
    This module is part of the `cisco.dnac collection <https://galaxy.ansible.com/cisco/dnac>`_ (version 6.24.0).

    To install it, use: :code:`ansible-galaxy collection install cisco.dnac`.
    You need further requirements to be able to use this module,
    see :ref:`Requirements <ansible_collections.cisco.dnac.sda_host_port_onboarding_workflow_manager_module_requirements>` for details.

    To use it in a playbook, specify: :code:`cisco.dnac.sda_host_port_onboarding_workflow_manager`.

.. version_added

.. rst-class:: ansible-version-added

New in cisco.dnac 6.17.0

.. contents::
   :local:
   :depth: 1

.. Deprecated


Synopsis
--------

.. Description

- Manage host onboarding operations such as adding, updating, and deleting port assignments and port channels of Network Devices in SD-Access Fabric.
- API to create port assignment(s) for Network Devices in SD-Access Fabric roles in Cisco Catalyst Center.
- API to Update port assignment(s) for Network Devices in SD-Access Fabric roles in Cisco Catalyst Center.
- API to delete port assignment(s) for Network Devices in SD-Access Fabric roles in Cisco Catalyst Center.
- API to create port channel(s) for Network Devices in SD-Access Fabric roles in Cisco Catalyst Center.
- API to update port channel(s) for Network Devices in SD-Access Fabric roles in Cisco Catalyst Center.
- API to delete port channel(s) for Network Devices in SD-Access Fabric roles in Cisco Catalyst Center.


.. Aliases


.. Requirements

.. _ansible_collections.cisco.dnac.sda_host_port_onboarding_workflow_manager_module_requirements:

Requirements
------------
The below requirements are needed on the host that executes this module.

- dnacentersdk \>= 2.9.2
- python \>= 3.9






.. Options

Parameters
----------

.. rst-class:: ansible-option-table

.. list-table::
  :width: 100%
  :widths: auto
  :header-rows: 1

  * - Parameter
    - Comments

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-config"></div>

      .. _ansible_collections.cisco.dnac.sda_host_port_onboarding_workflow_manager_module__parameter-config:

      .. rst-class:: ansible-option-title

      **config**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-config" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`list` / :ansible-option-elements:`elements=dictionary` / :ansible-option-required:`required`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      A list containing detailed configurations for Adding/Updating/Deleting port assignment(s) or port channel(s) of Network Devices in SD-Access Fabric roles in Cisco Catalyst Center.


      .. raw:: html

        </div>
    
  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-config/hostname"></div>

      .. _ansible_collections.cisco.dnac.sda_host_port_onboarding_workflow_manager_module__parameter-config/hostname:

      .. rst-class:: ansible-option-title

      **hostname**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-config/hostname" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      Hostname of the target device in the SD-Access Fabric on which access device ports need to be configured.

      Either the hostname or IP address of the network device must be provided for performing port assignment or port channel operations.

      The specified hostname must be identical to the hostname displayed in the inventory section of Cisco Catalyst Center.

      For example - "DC-T-9300.cisco.local"

      Note - If only the "ip\_address" or "hostname" is provided in the "deleted" state, all port assignment(s) and port channel(s) configured for the specified fabric device will be deleted.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-config/ip_address"></div>

      .. _ansible_collections.cisco.dnac.sda_host_port_onboarding_workflow_manager_module__parameter-config/ip_address:

      .. rst-class:: ansible-option-title

      **ip_address**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-config/ip_address" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      IP address of the target device in the SD-Access Fabric on which access device ports need to be configured.

      Either the hostname or IP address of the network device must be provided for performing port assignment or port channel operations.

      The specified IP address must match the management IP displayed in the inventory section of Cisco Catalyst Center.

      For example - "204.1.2.2"

      Note - If only the "ip\_address" or "hostname" is provided in the "deleted" state, all port assignment(s) and port channel(s) configured for the specified fabric device will be deleted.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-config/port_assignment_details"></div>

      .. _ansible_collections.cisco.dnac.sda_host_port_onboarding_workflow_manager_module__parameter-config/port_assignment_details:

      .. rst-class:: ansible-option-title

      **port_assignment_details**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-config/port_assignment_details" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`list` / :ansible-option-elements:`elements=dictionary`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      A list containing configuration details for adding, updating, or deleting port assignment(s) in Cisco Catalyst Center.

      The "interface\_name" and "connected\_device\_type" fields are required for add and update port assignment(s) operations.

      For the update port channel(s) operation, the parameters that can be updated include "data\_vlan\_name", "voice\_vlan\_name", "authentication\_template\_name" and "interface\_description".

      For delete port assignment(s) operation, the valid parameters are "interface\_name," "data\_vlan\_name," and "voice\_vlan\_name". If all three parameters are provided, only port assignments that match all specified criteria are deleted (i.e., AND filtering is applied).


      .. raw:: html

        </div>
    
  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-config/port_assignment_details/authentication_template_name"></div>

      .. _ansible_collections.cisco.dnac.sda_host_port_onboarding_workflow_manager_module__parameter-config/port_assignment_details/authentication_template_name:

      .. rst-class:: ansible-option-title

      **authentication_template_name**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-config/port_assignment_details/authentication_template_name" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string` / :ansible-option-required:`required`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      Specifies the authentication template applied to the port during the port assignment operation.

      The available options are "No Authentication", "Open Authentication", "Closed Authentication", and "Low Impact".

      The default "authentication\_template\_name" for all device types is "No Authentication".

      For Connected Device Type "TRUNKING\_DEVICE", the "authentication\_template\_name" must be set to "No Authentication".

      Security/scalable groups are only supported with the "No Authentication" profile.


      .. rst-class:: ansible-option-line

      :ansible-option-choices:`Choices:`

      - :ansible-option-choices-entry:`"No Authentication"`
      - :ansible-option-choices-entry:`"Open Authentication"`
      - :ansible-option-choices-entry:`"Closed Authentication"`
      - :ansible-option-choices-entry:`"Low Impact"`


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-config/port_assignment_details/connected_device_type"></div>

      .. _ansible_collections.cisco.dnac.sda_host_port_onboarding_workflow_manager_module__parameter-config/port_assignment_details/connected_device_type:

      .. rst-class:: ansible-option-title

      **connected_device_type**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-config/port_assignment_details/connected_device_type" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      Specifies the type of access device that needs to be onboarded on the specified interface.

      Valid options for Connected Device Types are - "USER\_DEVICE", "ACCESS\_POINT", and "TRUNKING\_DEVICE".

      TRUNKING\_DEVICE - Configures the interface as a trunk port. No additional parameters are required for this Connected Device Type. If the "authentication\_template\_name" is provided, it must be set to 'No Authentication' when configuring a "TRUNKING\_DEVICE".

      ACCESS\_POINT - Configures the port for connecting an access point. The "data\_vlan\_name" parameter is required when configuring "ACCESS\_POINT" devices in port assignments. Optionally, the "authentication\_template\_name" and "interface\_description" can also be specified.

      USER\_DEVICE - Configures the port to connect to a host device, such as an IP phone, computer, or laptop. At least one VLAN ("data\_vlan\_name" or "voice\_vlan\_name") is required when configuring a "USER\_DEVICE". Optional parameters include "security\_group\_name", "authentication\_template\_name", and "interface\_description".

      Note - The "connected\_device\_type" cannot be updated from "TRUNK" to "EXTENDED\_NODE" unless the protocol configured is PAGP.


      .. rst-class:: ansible-option-line

      :ansible-option-choices:`Choices:`

      - :ansible-option-choices-entry:`"TRUNKING\_DEVICE"`
      - :ansible-option-choices-entry:`"ACCESS\_POINT"`
      - :ansible-option-choices-entry:`"USER\_DEVICE"`


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-config/port_assignment_details/data_vlan_name"></div>

      .. _ansible_collections.cisco.dnac.sda_host_port_onboarding_workflow_manager_module__parameter-config/port_assignment_details/data_vlan_name:

      .. rst-class:: ansible-option-title

      **data_vlan_name**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-config/port_assignment_details/data_vlan_name" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      Specifies the Data VLAN name or IP address pool to be assigned to the port.

      This parameter is required when the connected\_device\_type is set to ACCESS\_POINT.

      At least one VLAN ("data\_vlan\_name" or "voice\_vlan\_name") is required when configuring a "USER\_DEVICE".


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-config/port_assignment_details/interface_description"></div>

      .. _ansible_collections.cisco.dnac.sda_host_port_onboarding_workflow_manager_module__parameter-config/port_assignment_details/interface_description:

      .. rst-class:: ansible-option-title

      **interface_description**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-config/port_assignment_details/interface_description" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      A description of the port assignment interface.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-config/port_assignment_details/interface_name"></div>

      .. _ansible_collections.cisco.dnac.sda_host_port_onboarding_workflow_manager_module__parameter-config/port_assignment_details/interface_name:

      .. rst-class:: ansible-option-title

      **interface_name**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-config/port_assignment_details/interface_name" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      Specifies the name of the port or interface on the fabric device where port assignment operations need to be performed.

      This parameter is required for adding or updating port assignments.

      For example - "GigabitEthernet2/1/1"


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-config/port_assignment_details/security_group_name"></div>

      .. _ansible_collections.cisco.dnac.sda_host_port_onboarding_workflow_manager_module__parameter-config/port_assignment_details/security_group_name:

      .. rst-class:: ansible-option-title

      **security_group_name**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-config/port_assignment_details/security_group_name" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      Specifies the security or scalable group name for the port assignment.

      Security/scalable groups are only supported with the "No Authentication" profile.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-config/port_assignment_details/voice_vlan_name"></div>

      .. _ansible_collections.cisco.dnac.sda_host_port_onboarding_workflow_manager_module__parameter-config/port_assignment_details/voice_vlan_name:

      .. rst-class:: ansible-option-title

      **voice_vlan_name**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-config/port_assignment_details/voice_vlan_name" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      Specifies the Voice VLAN name or IP address pool to be assigned to the port.

      At least one VLAN ("data\_vlan\_name" or "voice\_vlan\_name") is required when configuring a "USER\_DEVICE".


      .. raw:: html

        </div>


  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-config/port_channel_details"></div>

      .. _ansible_collections.cisco.dnac.sda_host_port_onboarding_workflow_manager_module__parameter-config/port_channel_details:

      .. rst-class:: ansible-option-title

      **port_channel_details**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-config/port_channel_details" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`list` / :ansible-option-elements:`elements=dictionary`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      A list containing configuration details for adding, updating, or deleting port channel(s) between a fabric edge and its remotely connected devices in Cisco Catalyst Center.

      The "interface\_names" and "connected\_device\_type" fields are required for add and update port channel(s) operations.

      For the update port channel(s) operation, the parameters that can be updated include "connected\_device\_type" and "port\_channel\_description".

      For delete port channel(s) operation, the valid parameters are "port\_channel\_name" and "connected\_device\_type". If both parameters are provided, only port channels that match the specified criteria are deleted (i.e., AND filtering is applied).


      .. raw:: html

        </div>
    
  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-config/port_channel_details/connected_device_type"></div>

      .. _ansible_collections.cisco.dnac.sda_host_port_onboarding_workflow_manager_module__parameter-config/port_channel_details/connected_device_type:

      .. rst-class:: ansible-option-title

      **connected_device_type**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-config/port_channel_details/connected_device_type" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      Specifies the type of device connected to the port channel. Valid options are "TRUNK" or "EXTENDED\_NODE".

      To create a port channel between a fabric edge node and an extended node, or between two extended nodes, select "EXTENDED\_NODE".

      To create a port channel with a fabric edge node or extended node on one side, and a third-party device or server port on the other side, choose "TRUNK".


      .. rst-class:: ansible-option-line

      :ansible-option-choices:`Choices:`

      - :ansible-option-choices-entry:`"TRUNK"`
      - :ansible-option-choices-entry:`"EXTENDED\_NODE"`


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-config/port_channel_details/interface_names"></div>

      .. _ansible_collections.cisco.dnac.sda_host_port_onboarding_workflow_manager_module__parameter-config/port_channel_details/interface_names:

      .. rst-class:: ansible-option-title

      **interface_names**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-config/port_channel_details/interface_names" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`list` / :ansible-option-elements:`elements=string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      A list of ports/interfaces of the target device in the SD-Access Fabric on which port channel needs to be configured.

      A maximum of 8 ports are supported in interface\_names for "PAGP" and "ON" protocols.

      A maximum of 16 ports are supported in interface\_names for the "LACP" protocol.

      Example - ["TwoGigabitEthernet2/0/1", "TwoGigabitEthernet2/0/2", "TwoGigabitEthernet2/0/3"]


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-config/port_channel_details/port_channel_description"></div>

      .. _ansible_collections.cisco.dnac.sda_host_port_onboarding_workflow_manager_module__parameter-config/port_channel_details/port_channel_description:

      .. rst-class:: ansible-option-title

      **port_channel_description**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-config/port_channel_details/port_channel_description" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      A description of the port channel.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-config/port_channel_details/port_channel_name"></div>

      .. _ansible_collections.cisco.dnac.sda_host_port_onboarding_workflow_manager_module__parameter-config/port_channel_details/port_channel_name:

      .. rst-class:: ansible-option-title

      **port_channel_name**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-config/port_channel_details/port_channel_name" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      Specifies the name of an existing port channel in the SD-Access Fabric that needs to be deleted.

      This parameter is applicable only for delete port channel operations.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-config/port_channel_details/protocol"></div>

      .. _ansible_collections.cisco.dnac.sda_host_port_onboarding_workflow_manager_module__parameter-config/port_channel_details/protocol:

      .. rst-class:: ansible-option-title

      **protocol**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-config/port_channel_details/protocol" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      Specifies the appropriate protocol for the specific Connected Device Type to be configured on the port channel.

      Valid options are "ON", "LACP", and "PAGP".

      By default, the protocol is "ON" for "connected\_device\_type" - "EXTENDED\_NODE".

      By default, the protocol is "LACP" for "connected\_device\_type" - "TRUNK".

      Protocol field cannot be updated after the initial configuration.

      The "connected\_device\_type" cannot be updated from "TRUNK" to "EXTENDED\_NODE" unless the protocol configured is PAGP.


      .. rst-class:: ansible-option-line

      :ansible-option-choices:`Choices:`

      - :ansible-option-choices-entry:`"ON"`
      - :ansible-option-choices-entry:`"LACP"`
      - :ansible-option-choices-entry:`"PAGP"`


      .. raw:: html

        </div>



  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-config_verify"></div>

      .. _ansible_collections.cisco.dnac.sda_host_port_onboarding_workflow_manager_module__parameter-config_verify:

      .. rst-class:: ansible-option-title

      **config_verify**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-config_verify" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`boolean`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Set to True to verify the Cisco Catalyst Center configuration after applying the playbook configuration.


      .. rst-class:: ansible-option-line

      :ansible-option-choices:`Choices:`

      - :ansible-option-choices-entry-default:`false` :ansible-option-choices-default-mark:`← (default)`
      - :ansible-option-choices-entry:`true`


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-dnac_api_task_timeout"></div>

      .. _ansible_collections.cisco.dnac.sda_host_port_onboarding_workflow_manager_module__parameter-dnac_api_task_timeout:

      .. rst-class:: ansible-option-title

      **dnac_api_task_timeout**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-dnac_api_task_timeout" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`integer`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Defines the timeout in seconds for API calls to retrieve task details. If the task details are not received within this period, the process will end, and a timeout notification will be logged.


      .. rst-class:: ansible-option-line

      :ansible-option-default-bold:`Default:` :ansible-option-default:`1200`

      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-dnac_debug"></div>

      .. _ansible_collections.cisco.dnac.sda_host_port_onboarding_workflow_manager_module__parameter-dnac_debug:

      .. rst-class:: ansible-option-title

      **dnac_debug**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-dnac_debug" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`boolean`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Indicates whether debugging is enabled in the Cisco Catalyst Center SDK.


      .. rst-class:: ansible-option-line

      :ansible-option-choices:`Choices:`

      - :ansible-option-choices-entry-default:`false` :ansible-option-choices-default-mark:`← (default)`
      - :ansible-option-choices-entry:`true`


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-dnac_host"></div>

      .. _ansible_collections.cisco.dnac.sda_host_port_onboarding_workflow_manager_module__parameter-dnac_host:

      .. rst-class:: ansible-option-title

      **dnac_host**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-dnac_host" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string` / :ansible-option-required:`required`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      The hostname of the Cisco Catalyst Center.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-dnac_log"></div>

      .. _ansible_collections.cisco.dnac.sda_host_port_onboarding_workflow_manager_module__parameter-dnac_log:

      .. rst-class:: ansible-option-title

      **dnac_log**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-dnac_log" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`boolean`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Flag to enable/disable playbook execution logging.

      When true and dnac\_log\_file\_path is provided, - Create the log file at the execution location with the specified name.

      When true and dnac\_log\_file\_path is not provided, - Create the log file at the execution location with the name 'dnac.log'.

      When false, - Logging is disabled.

      If the log file doesn't exist, - It is created in append or write mode based on the "dnac\_log\_append" flag.

      If the log file exists, - It is overwritten or appended based on the "dnac\_log\_append" flag.


      .. rst-class:: ansible-option-line

      :ansible-option-choices:`Choices:`

      - :ansible-option-choices-entry-default:`false` :ansible-option-choices-default-mark:`← (default)`
      - :ansible-option-choices-entry:`true`


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-dnac_log_append"></div>

      .. _ansible_collections.cisco.dnac.sda_host_port_onboarding_workflow_manager_module__parameter-dnac_log_append:

      .. rst-class:: ansible-option-title

      **dnac_log_append**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-dnac_log_append" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`boolean`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Determines the mode of the file. Set to True for 'append' mode. Set to False for 'write' mode.


      .. rst-class:: ansible-option-line

      :ansible-option-choices:`Choices:`

      - :ansible-option-choices-entry:`false`
      - :ansible-option-choices-entry-default:`true` :ansible-option-choices-default-mark:`← (default)`


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-dnac_log_file_path"></div>

      .. _ansible_collections.cisco.dnac.sda_host_port_onboarding_workflow_manager_module__parameter-dnac_log_file_path:

      .. rst-class:: ansible-option-title

      **dnac_log_file_path**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-dnac_log_file_path" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Governs logging. Logs are recorded if dnac\_log is True.

      If path is not specified, - When 'dnac\_log\_append' is True, 'dnac.log' is generated in the current Ansible directory; logs are appended. - When 'dnac\_log\_append' is False, 'dnac.log' is generated; logs are overwritten.

      If path is specified, - When 'dnac\_log\_append' is True, the file opens in append mode. - When 'dnac\_log\_append' is False, the file opens in write (w) mode. - In shared file scenarios, without append mode, content is overwritten after each module execution. - For a shared log file, set append to False for the 1st module (to overwrite); for subsequent modules, set append to True.


      .. rst-class:: ansible-option-line

      :ansible-option-default-bold:`Default:` :ansible-option-default:`"dnac.log"`

      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-dnac_log_level"></div>

      .. _ansible_collections.cisco.dnac.sda_host_port_onboarding_workflow_manager_module__parameter-dnac_log_level:

      .. rst-class:: ansible-option-title

      **dnac_log_level**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-dnac_log_level" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Sets the threshold for log level. Messages with a level equal to or higher than this will be logged. Levels are listed in order of severity [CRITICAL, ERROR, WARNING, INFO, DEBUG].

      CRITICAL indicates serious errors halting the program. Displays only CRITICAL messages.

      ERROR indicates problems preventing a function. Displays ERROR and CRITICAL messages.

      WARNING indicates potential future issues. Displays WARNING, ERROR, CRITICAL messages.

      INFO tracks normal operation. Displays INFO, WARNING, ERROR, CRITICAL messages.

      DEBUG provides detailed diagnostic info. Displays all log messages.


      .. rst-class:: ansible-option-line

      :ansible-option-default-bold:`Default:` :ansible-option-default:`"WARNING"`

      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-dnac_password"></div>

      .. _ansible_collections.cisco.dnac.sda_host_port_onboarding_workflow_manager_module__parameter-dnac_password:

      .. rst-class:: ansible-option-title

      **dnac_password**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-dnac_password" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      The password for authentication at the Cisco Catalyst Center.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-dnac_port"></div>

      .. _ansible_collections.cisco.dnac.sda_host_port_onboarding_workflow_manager_module__parameter-dnac_port:

      .. rst-class:: ansible-option-title

      **dnac_port**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-dnac_port" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Specifies the port number associated with the Cisco Catalyst Center.


      .. rst-class:: ansible-option-line

      :ansible-option-default-bold:`Default:` :ansible-option-default:`"443"`

      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-dnac_task_poll_interval"></div>

      .. _ansible_collections.cisco.dnac.sda_host_port_onboarding_workflow_manager_module__parameter-dnac_task_poll_interval:

      .. rst-class:: ansible-option-title

      **dnac_task_poll_interval**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-dnac_task_poll_interval" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`integer`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Specifies the interval in seconds between successive calls to the API to retrieve task details.


      .. rst-class:: ansible-option-line

      :ansible-option-default-bold:`Default:` :ansible-option-default:`2`

      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-dnac_username"></div>
        <div class="ansibleOptionAnchor" id="parameter-user"></div>

      .. _ansible_collections.cisco.dnac.sda_host_port_onboarding_workflow_manager_module__parameter-dnac_username:
      .. _ansible_collections.cisco.dnac.sda_host_port_onboarding_workflow_manager_module__parameter-user:

      .. rst-class:: ansible-option-title

      **dnac_username**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-dnac_username" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-aliases:`aliases: user`

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      The username for authentication at the Cisco Catalyst Center.


      .. rst-class:: ansible-option-line

      :ansible-option-default-bold:`Default:` :ansible-option-default:`"admin"`

      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-dnac_verify"></div>

      .. _ansible_collections.cisco.dnac.sda_host_port_onboarding_workflow_manager_module__parameter-dnac_verify:

      .. rst-class:: ansible-option-title

      **dnac_verify**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-dnac_verify" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`boolean`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Flag to enable or disable SSL certificate verification.


      .. rst-class:: ansible-option-line

      :ansible-option-choices:`Choices:`

      - :ansible-option-choices-entry:`false`
      - :ansible-option-choices-entry-default:`true` :ansible-option-choices-default-mark:`← (default)`


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-dnac_version"></div>

      .. _ansible_collections.cisco.dnac.sda_host_port_onboarding_workflow_manager_module__parameter-dnac_version:

      .. rst-class:: ansible-option-title

      **dnac_version**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-dnac_version" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Specifies the version of the Cisco Catalyst Center that the SDK should use.


      .. rst-class:: ansible-option-line

      :ansible-option-default-bold:`Default:` :ansible-option-default:`"2.2.3.3"`

      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-state"></div>

      .. _ansible_collections.cisco.dnac.sda_host_port_onboarding_workflow_manager_module__parameter-state:

      .. rst-class:: ansible-option-title

      **state**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-state" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      The desired state of Cisco Catalyst Center after the module execution.


      .. rst-class:: ansible-option-line

      :ansible-option-choices:`Choices:`

      - :ansible-option-choices-entry-default:`"merged"` :ansible-option-choices-default-mark:`← (default)`
      - :ansible-option-choices-entry:`"deleted"`


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-validate_response_schema"></div>

      .. _ansible_collections.cisco.dnac.sda_host_port_onboarding_workflow_manager_module__parameter-validate_response_schema:

      .. rst-class:: ansible-option-title

      **validate_response_schema**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-validate_response_schema" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`boolean`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Flag for Cisco Catalyst Center SDK to enable the validation of request bodies against a JSON schema.


      .. rst-class:: ansible-option-line

      :ansible-option-choices:`Choices:`

      - :ansible-option-choices-entry:`false`
      - :ansible-option-choices-entry-default:`true` :ansible-option-choices-default-mark:`← (default)`


      .. raw:: html

        </div>


.. Attributes


.. Notes

Notes
-----

.. note::
   - SDK Methods used are - devices.Devices.get\_device\_list - sda.SDA.get\_device\_info - site\_design.SiteDesigns.get\_sites - sda.SDA.get\_fabric\_sites - sda.SDA.get\_port\_assignments - sda.SDA.get\_port\_channels - sda.SDA.add\_port\_assignments - sda.SDA.update\_port\_assignments - sda.SDA.delete\_port\_assignments - sda.SDA.add\_port\_channels - sda.SDA.update\_port\_channels - sda.SDA.update\_port\_channels
   - Paths used are - GET /dna/intent/api/v1/network-device - GET /dna/intent/api/v1/business/sda/device - GET /dna/intent/api/v1/sites - GET /dna/intent/api/v1/sda/fabricSites - GET /dna/intent/api/v1/sda/portAssignments - GET /dna/intent/api/v1/sda/portChannels - POST /dna/intent/api/v1/sda/portAssignments - PUT /dna/intent/api/v1/sda/portAssignments - DELETE /dna/intent/api/v1/sda/portAssignments - POST /dna/intent/api/v1/sda/portChannels - PUT /dna/intent/api/v1/sda/portChannels - DELETE /dna/intent/api/v1/sda/portChannels
   - Does not support \ :literal:`check\_mode`\ 
   - The plugin runs on the control node and does not use any ansible connection plugins instead embedded connection manager from Cisco Catalyst Center SDK
   - The parameters starting with dnac\_ are used by the Cisco Catalyst Center Python SDK to establish the connection

.. Seealso


.. Examples

Examples
--------

.. code-block:: yaml+jinja

    
    - name: Add port interfaces and port channels for a specific fabric device
      cisco.dnac.sda_host_port_onboarding_workflow_manager:
        dnac_host: "{{dnac_host}}"
        dnac_username: "{{dnac_username}}"
        dnac_password: "{{dnac_password}}"
        dnac_verify: "{{dnac_verify}}"
        dnac_port: "{{dnac_port}}"
        dnac_version: "{{dnac_version}}"
        dnac_debug: "{{dnac_debug}}"
        dnac_log: true
        dnac_log_level: "{{dnac_log_level}}"
        state: merged
        config:
          - ip_address: "204.1.2.2"
            port_assignment_details:
              - interface_name: "FortyGigabitEthernet1/1/1"
                connected_device_type: "TRUNKING_DEVICE"

              - interface_name: "FortyGigabitEthernet1/1/2"
                connected_device_type: "TRUNKING_DEVICE"
                authentication_template_name: "No Authentication"
                interface_description: "Trunk Port"

              - interface_name: "FortyGigabitEthernet2/1/1"
                connected_device_type: "ACCESS_POINT"
                data_vlan_name: "AG_23"

              - interface_name: "FortyGigabitEthernet2/1/2"
                connected_device_type: "ACCESS_POINT"
                data_vlan_name: "AG_23"
                authentication_template_name: "No Authentication"
                interface_description: "Access Point Port"

              - interface_name: "GigabitEthernet1/1/1"
                connected_device_type: "ACCESS_POINT"
                data_vlan_name: "AG_23"
                authentication_template_name: "Open Authentication"
                interface_description: "Access Point Port"

              - interface_name: "GigabitEthernet1/1/2"
                connected_device_type: "ACCESS_POINT"
                data_vlan_name: "AG_23"
                authentication_template_name: "Closed Authentication"
                interface_description: "Access Point Port"

              - interface_name: "GigabitEthernet1/1/3"
                connected_device_type: "ACCESS_POINT"
                data_vlan_name: "AG_23"
                authentication_template_name: "Low Impact"
                interface_description: "Access Point Port"

              - interface_name: "GigabitEthernet1/1/4"
                connected_device_type: "USER_DEVICE"
                data_vlan_name: "AG_VLAN_23"

              - interface_name: "GigabitEthernet2/1/1"
                connected_device_type: "USER_DEVICE"
                voice_vlan_name: "VOICE_VLAN_23"

              - interface_name: "GigabitEthernet2/1/2"
                connected_device_type: "USER_DEVICE"
                data_vlan_name: "AG_23"
                voice_vlan_name: "VOICE_VLAN_23"

              - interface_name: "GigabitEthernet2/1/3"
                connected_device_type: "USER_DEVICE"
                data_vlan_name: "AG_23"
                voice_vlan_name: "VOICE_VLAN_23"
                security_group_name: "Guests"

              - interface_name: "GigabitEthernet2/1/4"
                connected_device_type: "USER_DEVICE"
                data_vlan_name: "AG_23"
                voice_vlan_name: "VOICE_VLAN_23"
                security_group_name: "Guests"
                authentication_template_name: "No Authentication"

              - interface_name: "GigabitEthernet2/1/4"
                connected_device_type: "USER_DEVICE"
                data_vlan_name: "AG_23"
                security_group_name: "Guests"
                authentication_template_name: "Closed Authentication"

              - interface_name: "GigabitEthernet2/1/4"
                connected_device_type: "USER_DEVICE"
                voice_vlan_name: "VOICE_VLAN_23"
                authentication_template_name: "Low Impact"
                interface_description: "User Device"

            port_channel_details:
              - interface_names: ["TenGigabitEthernet1/0/37", "TenGigabitEthernet1/0/38", "TenGigabitEthernet1/0/39"]
                connected_device_type: "TRUNK"

              - interface_names: ["TenGigabitEthernet1/0/43", "TenGigabitEthernet1/0/44"]
                connected_device_type: "TRUNK"
                protocol: "ON"

              - interface_names: ["TenGigabitEthernet1/0/45", "TenGigabitEthernet1/0/46", "TenGigabitEthernet1/0/47", "TenGigabitEthernet1/0/48"]
                connected_device_type: "TRUNK"
                protocol: "LACP"

              - interface_names: ["TenGigabitEthernet1/1/2", "TenGigabitEthernet1/1/3", "TenGigabitEthernet1/1/4"]
                connected_device_type: "TRUNK"
                protocol: "PAGP"
                port_channel_description: "Trunk port channel"

              - interface_names: ["TenGigabitEthernet1/1/5", "TenGigabitEthernet1/1/6"]
                connected_device_type: "EXTENDED_NODE"

              - interface_names: ["TenGigabitEthernet1/1/7", "TenGigabitEthernet1/1/8"]
                connected_device_type: "EXTENDED_NODE"
                protocol: "PAGP"
                port_channel_description: "extended node port channel"

    - name: Update port interfaces and port channels for a specific fabric device
      cisco.dnac.sda_host_port_onboarding_workflow_manager:
        dnac_host: "{{dnac_host}}"
        dnac_username: "{{dnac_username}}"
        dnac_password: "{{dnac_password}}"
        dnac_verify: "{{dnac_verify}}"
        dnac_port: "{{dnac_port}}"
        dnac_version: "{{dnac_version}}"
        dnac_debug: "{{dnac_debug}}"
        dnac_log: true
        dnac_log_level: "{{dnac_log_level}}"
        state: merged
        config:
          - hostname: "DC-T-9300.cisco.local"
            port_assignment_details:
              - interface_name: "FortyGigabitEthernet1/1/1"
                connected_device_type: "TRUNKING_DEVICE"
                interface_description: "Trunking device on port 111"

              - interface_name: "GigabitEthernet2/1/4"
                connected_device_type: "USER_DEVICE"
                data_vlan_name: "AG_VLAN_23"
                security_group_name: "Guests"
                authentication_template_name: "Closed Authentication"

              - interface_name: "GigabitEthernet2/1/4"
                connected_device_type: "USER_DEVICE"
                data_vlan_name: "AG_23"
                security_group_name: "Guests"
                authentication_template_name: "Closed Authentication"
                interface_description: "User device at port 214"

            port_channel_details:
              - interface_names: ["TenGigabitEthernet1/1/2", "TenGigabitEthernet1/1/3", "TenGigabitEthernet1/1/4"]
                connected_device_type: "EXTENDED_NODE"
                protocol: 'PAGP'
                port_channel_description: "Trunk port channel"

    - name: Delete ALL port assignments and port channels for the fabric device using hostname
      cisco.dnac.sda_host_port_onboarding_workflow_manager:
        dnac_host: "{{dnac_host}}"
        dnac_username: "{{dnac_username}}"
        dnac_password: "{{dnac_password}}"
        dnac_verify: "{{dnac_verify}}"
        dnac_port: "{{dnac_port}}"
        dnac_version: "{{dnac_version}}"
        dnac_debug: "{{dnac_debug}}"
        dnac_log: true
        dnac_log_level: "{{dnac_log_level}}"
        state: deleted
        config:
          - hostname: "DC-T-9300.cisco.local"

    - name: Delete ALL port assignments and port channels for the fabric device using ip_address
      cisco.dnac.sda_host_port_onboarding_workflow_manager:
        dnac_host: "{{dnac_host}}"
        dnac_username: "{{dnac_username}}"
        dnac_password: "{{dnac_password}}"
        dnac_verify: "{{dnac_verify}}"
        dnac_port: "{{dnac_port}}"
        dnac_version: "{{dnac_version}}"
        dnac_debug: "{{dnac_debug}}"
        dnac_log: true
        dnac_log_level: "{{dnac_log_level}}"
        state: deleted
        config:
          - ip_address: "204.1.2.2"

    - name: Delete specific interfaces and port channels using interface names and port channel name
      cisco.dnac.sda_host_port_onboarding_workflow_manager:
        dnac_host: "{{dnac_host}}"
        dnac_username: "{{dnac_username}}"
        dnac_password: "{{dnac_password}}"
        dnac_verify: "{{dnac_verify}}"
        dnac_port: "{{dnac_port}}"
        dnac_version: "{{dnac_version}}"
        dnac_debug: "{{dnac_debug}}"
        dnac_log: true
        dnac_log_level: "{{dnac_log_level}}"
        state: deleted
        config:
          - ip_address: "204.1.2.2"
            port_assignment_details:
              - interface_name: "FortyGigabitEthernet2/1/2"
                data_vlan_name: "AG_23"

              - interface_name: "GigabitEthernet2/1/3"
                voice_vlan_name: "VOICE_VLAN_23"

            port_channel_details:
              - port_channel_name: "Port-channel2"
                connected_device_type: "TRUNK"

              - port_channel_name: "Port-channel6"
                connected_device_type: "EXTENDED_NODE"

    - name: Delete specific interfaces and port channels using interface names and port channel name
      cisco.dnac.sda_host_port_onboarding_workflow_manager:
        dnac_host: "{{dnac_host}}"
        dnac_username: "{{dnac_username}}"
        dnac_password: "{{dnac_password}}"
        dnac_verify: "{{dnac_verify}}"
        dnac_port: "{{dnac_port}}"
        dnac_version: "{{dnac_version}}"
        dnac_debug: "{{dnac_debug}}"
        dnac_log: true
        dnac_log_level: "{{dnac_log_level}}"
        state: deleted
        config:
          - ip_address: "204.1.2.2"
            port_assignment_details:
              - interface_name: "FortyGigabitEthernet1/1/1"
              - interface_name: "FortyGigabitEthernet1/1/2"
              - interface_name: "GigabitEthernet2/1/1"
              - interface_name: "TenGigabitEthernet1/0/37"
              - interface_name: "TenGigabitEthernet1/0/38"
              - interface_name: "TenGigabitEthernet1/0/39"
            port_channel_details:
              - port_channel_name: "Port-channel2"
              - port_channel_name: "Port-channel5"
              - port_channel_name: "Port-channel6"

    - name: Delete interfaces that have specified data vlan assigned
      cisco.dnac.sda_host_port_onboarding_workflow_manager:
        dnac_host: "{{dnac_host}}"
        dnac_username: "{{dnac_username}}"
        dnac_password: "{{dnac_password}}"
        dnac_verify: "{{dnac_verify}}"
        dnac_port: "{{dnac_port}}"
        dnac_version: "{{dnac_version}}"
        dnac_debug: "{{dnac_debug}}"
        dnac_log: true
        dnac_log_level: "{{dnac_log_level}}"
        state: deleted
        config:
          - hostname: "DC-T-9300.cisco.local"
            port_assignment_details:
              - data_vlan_name: "AG_23"
              - voice_vlan_name: "VOICE_VLAN_23"

    - name: Delete all port channels that have Connected Device Type EXTENDED_NODE
      cisco.dnac.sda_host_port_onboarding_workflow_manager:
        dnac_host: "{{dnac_host}}"
        dnac_username: "{{dnac_username}}"
        dnac_password: "{{dnac_password}}"
        dnac_verify: "{{dnac_verify}}"
        dnac_port: "{{dnac_port}}"
        dnac_version: "{{dnac_version}}"
        dnac_debug: "{{dnac_debug}}"
        dnac_log: true
        dnac_log_level: "{{dnac_log_level}}"
        state: deleted
        config:
          - ip_address: "204.1.2.2"
            port_channel_details:
              - connected_device_type: "EXTENDED_NODE"




.. Facts


.. Return values

Return Values
-------------
Common return values are documented :ref:`here <common_return_values>`, the following are the fields unique to this module:

.. rst-class:: ansible-option-table

.. list-table::
  :width: 100%
  :widths: auto
  :header-rows: 1

  * - Key
    - Description

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="return-response_1"></div>

      .. _ansible_collections.cisco.dnac.sda_host_port_onboarding_workflow_manager_module__return-response_1:

      .. rst-class:: ansible-option-title

      **response_1**

      .. raw:: html

        <a class="ansibleOptionLink" href="#return-response_1" title="Permalink to this return value"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`dictionary`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      A dictionary with  with the response returned by the Cisco Catalyst Center Python SDK


      .. rst-class:: ansible-option-line

      :ansible-option-returned-bold:`Returned:` always

      .. rst-class:: ansible-option-line
      .. rst-class:: ansible-option-sample

      :ansible-option-sample-bold:`Sample:` :ansible-rv-sample-value:`"{\\n  \\"response\\":\\n    {\\n      \\"response\\": String,\\n      \\"version\\": String\\n    },\\n  \\"msg\\": String\\n}\\n"`


      .. raw:: html

        </div>


  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="return-response_2"></div>

      .. _ansible_collections.cisco.dnac.sda_host_port_onboarding_workflow_manager_module__return-response_2:

      .. rst-class:: ansible-option-title

      **response_2**

      .. raw:: html

        <a class="ansibleOptionLink" href="#return-response_2" title="Permalink to this return value"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`list` / :ansible-option-elements:`elements=string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      A string with the response returned by the Cisco Catalyst Center Python SDK


      .. rst-class:: ansible-option-line

      :ansible-option-returned-bold:`Returned:` always

      .. rst-class:: ansible-option-line
      .. rst-class:: ansible-option-sample

      :ansible-option-sample-bold:`Sample:` :ansible-rv-sample-value:`["{\\n  \\"response\\": []", "\\n  \\"msg\\": String\\n}\\n"]`


      .. raw:: html

        </div>



..  Status (Presently only deprecated)


.. Authors

Authors
~~~~~~~

- Rugvedi Kapse (@rukapse) Madhan Sankaranarayanan (@madhansansel)



.. Extra links

Collection links
~~~~~~~~~~~~~~~~

.. raw:: html

  <p class="ansible-links">
    <a href="https://github.com/cisco-en-programmability/dnacenter-ansible/issues" aria-role="button" target="_blank" rel="noopener external">Issue Tracker</a>
    <a href="https://github.com/cisco-en-programmability/dnacenter-ansible" aria-role="button" target="_blank" rel="noopener external">Repository (Sources)</a>
  </p>

.. Parsing errors

